--- a/111102052_Lab1.html
+++ b/111102052_Lab1.html
@@ -66,7 +66,7 @@
         <table>
             <tr>
                 <td rowspan="3" class="personal-photo">
-                    <img src="./pic/myphoto.jpg" alt="Personal Photo"><br>
+                    <img src="myphoto.jpg" alt="Personal Photo"><br>
                     personal photo
                 </td>
                 <td colspan="2">Name: <input type="text"> &nbsp; 
